pilot/pkg/config/kube/ingress/testdata/gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: foo
  namespace: ns
  annotations:
    istio.io/gateway.selector: "istio=ingressgateway-foo"
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - backend:
              serviceName: service1
              servicePort: 4200
