pilot/pkg/config/kube/ingress/testdata/overlay.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: ns
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - backend:
              serviceName: service1
              servicePort: 4200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo2
  namespace: ns
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - path: /second
            backend:
              serviceName: service2
              servicePort: 4200
