pilot/pkg/config/kube/ingress/testdata/tls-no-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls
  namespace: bar
spec:
  rules:
    - host: foo.org
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 80
            path: /*
  tls:
    - hosts:
        - foo.org
