pilot/pkg/config/kube/ingress/testdata/tls-no-secret.yaml.golden
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/route-semantics: ingress
  creationTimestamp: null
  name: foo-org-tls-istio-autogenerated-k8s-ingress
  namespace: bar
spec:
  gateways:
  - istio-system/tls-istio-autogenerated-k8s-ingress-bar
  hosts:
  - foo.org
  http:
  - route:
    - destination:
        host: httpbin.bar.svc.mydomain
        port:
          number: 80
      weight: 100
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: tls-istio-autogenerated-k8s-ingress-bar
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-80-ingress-tls-bar
      number: 80
      protocol: HTTP
---
